# RV

3 Praktikum/: MNIST_Klassifikator.ipynb
3 Praktikum/JavaNNS/: ReadMe.txt
3 Praktikum/RV_Versuche/Versuch_1_Gruppe1/: RV02.h  vc90.idb
3 Praktikum/RV_Versuche/Versuch_3_Gruppe1/: LabelReader.h
3 Praktikum/RV_Versuche/Versuch_4_Gruppe1/: RV03.cpp  RV03.dsp  RV03.h  RV03.sln  RV03.vcproj  main.cpp
3 Praktikum/gtk+-1.3.0/: Makefile.in  aclocal.m4  config.h.in  configure  ltmain.sh
3 Praktikum/gtk+-1.3.0/gdk/: Makefile.in  makefile.mingw  makefile.msc
3 Praktikum/gtk+-1.3.0/gtk/: Makefile.in  gtk.defs  gtkmarshal.c  gtktypebuiltins_evals.c  gtktypebuiltins_ids.c  gtktypebuiltins_vars.c  makefile.mingw  makefile.mingw.in  makefile.msc  testgtk.c  testgtkrc
3 Praktikum/gtk+-1.3.0/po/: ChangeLog  ca.gmo  ca.po  cat-id-tbl.c  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  gtk+.pot  hr.gmo  hr.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  lt.gmo  lt.po  nl.gmo  (+27 more)
RV01_Gruppe1/: RV01.h  RV01.ncb  RV01.sln  RV01.vcproj  RV01.vcproj.7.10.old  RV01.vcxproj  RV01.vcxproj.filters  UpgradeLog.XML  vc90.idb
RV01_Gruppe1/Backup/: RV01.sln
RV01_Gruppe1/Debug/: BuildLog.htm
RV_Versuche/Versuch_1_Gruppe1/: RV02.cpp  RV02.vcproj  UpgradeLog.XML
RV_Versuche/Versuch_2_Gruppe1/: RV01.vcproj
RV_Versuche/Versuch_3_Gruppe1/: LabelReader.cpp  LabelReader.sln  LabelReader.vcproj  main.cpp
RV_Versuche/Versuch_4_Gruppe1/: UpgradeLog.XML  vc90.idb
Versuch_2_Gruppe1/: RV01.cpp  UpgradeLog.XML  main.cpp  vc90.idb
ltilib/: DIRTREE  LTILIB_aufsetzen.txt  README  ltilib.url
ltilib/data/: nonskin-32-32-32.hist  skin-32-32-32.hist
ltilib/doc/: doc.cfg  doc_sf.cfg  docheader
ltilib/doc/homepage/: changelog.html  doxyerr.pl  faq.html  index.shtml  ltilib.css  projects.html
ltilib/doc/html/: hits.html  hits.shtml
ltilib/doc/src/: ltiArchitecture.h  ltiCSS.css  ltiCompilers.h  ltiDocu.h  ltiDocuClassifiers.h  ltiDocuSegmentation.h  ltiExamples.h  ltiFooter.html  ltiGroups.h  ltiHeader.html  ltiHierarchy.h  ltiNewFunctors.h
ltilib/examples/: Makefile  readme.txt
ltilib/examples/bitmap2eps/: bitmap2eps.cpp  readme.html
ltilib/examples/classifierViz/: classifierViz.cpp  readme.txt
ltilib/examples/clusteringViz/: clusteringViz.cpp
ltilib/examples/collage/: collage.cpp
ltilib/examples/colorquant/: colorquant.cpp  files.txt
ltilib/examples/cwagmeval/: README  cwagmeval.cpp  images.txt  ltiCWAGMSegmentationEvaluation.cpp  ltiCWAGMSegmentationEvaluation.h  makelinks
ltilib/examples/distort/: distort.cpp  files.txt
ltilib/examples/fader/: fader.cpp
ltilib/examples/ltiview/: ltiview.cpp
ltilib/examples/pareto/: README  pareto.cpp
ltilib/examples/secucam/: secucam.cpp
ltilib/examples/setgen/: README  setgen.cpp
ltilib/examples/shapeRecognition/: README  classId.txt  clear  createTest  createTrain  doall  shapeRecognition.cpp
ltilib/examples/template/: Makefile.in  README
ltilib/lib/: ltilib.h  ltilib7_d.idb
ltilib/lib/headerFiles/: ltiAbsValue.h  ltiAddScalar.h  ltiArctanLUT.h  ltiAscii85Codec.h  ltiAssert.h  ltiAxLocalRegions.h  ltiBagging.h  ltiBicubicInterpolator.h  ltiBicubicInterpolator_template.h  ltiBilinearInterpolator.h  ltiBilinearInterpolator_template.h  ltiBinarizationCodec.h  ltiBinaryKernels_template.h  ltiBiquadraticInterpolator_template.h  ltiBlobEM.h  ltiBorderExtrema.h  ltiBorderSignature.h  ltiBoundingBox_template.h  ltiBoundsFunctor.h  ltiBrightRGB.h  ltiCMYKColor.h  ltiCamshiftTracker.h  ltiCannyEdges.h  ltiCartesianToPolar.h  ltiChannelStatistics.h  ltiCholeskyDecomposition_template.h  ltiChrominanceModelEstimator.h  ltiClusteringValidity.h  ltiCoilBackgroundSegmentation.h  ltiColorContrastGradient.h  ltiColorEdgesGS.h  ltiColorModelEstimator.h  ltiColorModelSelector.h  ltiColorNormalizationBase.h  ltiColors.h  ltiCombination.h  ltiComplex.h  ltiConfig.h  ltiConfigFileHandler.h  ltiContour.h  (+309 more)
ltilib/linux/: Makefile.custom.in  Makefile.cvs  Makefile.in  Makefile.jni.in  README  acinclude.m4  config.h.in  configure  configure.in  extrapaths_template.mk  lti-config.in  lti-local-config.in  mkinstalldirs
ltilib/linux/g++/: limits
ltilib/misc/eval/: README  ltiParetoFront.cpp  ltiParetoFront.h  ltiParetoFrontTester.cpp  ltiParetoFrontTester.h
ltilib/misc/java/: Makefile  config.in  configure
ltilib/misc/lamath/: clapack.h  ltiFastEigenSystem.cpp  ltiFastEigenSystem.h  ltiFastGeneralizedEigenSystem.cpp  ltiFastSVD.cpp  ltiFastSVD.h  ltiFastSVD_template.h  ltiGenEigVectors.cpp  ltiGenEigVectors.h  ltiLDA.cpp  ltiLDA.h  ltiLapackInterface.cpp  ltiSerialLDA.cpp  ltiSerialLDA.h  ltiSerialLDA_template.h
ltilib/src/basics/: ltiBox.h  ltiClassName.cpp  ltiClassName.h  ltiColors.cpp  ltiDebug.h  ltiException.cpp  ltiFunctor.cpp  ltiMacroSymbols.h  ltiObject.cpp  ltiObjectFactory.h  ltiPerformanceConfig.h  ltiPoint.h  ltiStatus.cpp  ltiTypes.h  ltiUndebug.h
ltilib/src/classifiers/: ltiAdaptiveKMeans.cpp  ltiAdaptiveKMeans.h  ltiBagging.cpp  ltiBhattacharyyaDistOfSubset.cpp  ltiBhattacharyyaDistOfSubset.h  ltiCentroidClustering.cpp  (+71 more)
ltilib/tester/: ltiTester.cpp  ltiTester.h  main.cpp
ltilib/win/: README
(+918 files in other folders)
